# pyagentvox

./: .gitignore  AGENTS.md  AVATAR_HOVER_FEATURES_PLAN.md  AVATAR_TAGGING_AUTOMATION.md  CHANGELOG.md  CONTRIBUTING.md  CONTROL_TAGS_GUIDE.md  CONTROL_TAGS_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  SETUP.md  USAGE.md  config.example.yaml  consolidate_avatar_tags.py  pyproject.toml  pytest.ini  remove_backgrounds_batch.py  switch_voice.sh
.claude/: README.md
.claude/agents/: documentation-agent.md
.claude/docs/: patterns.md  style-guide.md  testing.md
.claude/hooks/: refresh-claude-md.ps1
.claude/skills/avatar-tags/: SKILL.md  avatar-tags.sh  skill.md
.claude/skills/stt-control/: SKILL.md  skill.md  stt-control.sh
.claude/skills/tts-control/: SKILL.md  skill.md  tts-control.sh
.claude/skills/voice/: SKILL.md  skill.md  voice.sh
.claude/skills/voice-context/: SKILL.md  voice-context.sh
.claude/skills/voice-modify/: SKILL.md  skill.md  voice-modify.sh
.claude/skills/voice-stop/: SKILL.md  skill.md  voice-stop.sh
.claude/skills/voice-switch/: SKILL.md  skill.md  voice-switch.sh
colab/: README.md  _test_drive_menu.py  _test_drive_menu2.py  colab_runner.py  go.py  kaggle_luna_avatar_generator.ipynb  launch.py  luna_avatar_generator.ipynb  prompt_manifest.py
pyagentvox/: __init__.py  __main__.py  avatar_tags.py  avatar_widget.py  config.py  injection.py  instruction.py  pyagentvox.py  pyagentvox.yaml  setup.py  tts.py
pyagentvox/tts_engines/: __init__.py  edge.py
src/pyagentvox/: __init__.py  _edge_protocol.py  _protocol.py  azure.py  constants.py  edge.py  exceptions.py  models.py  ssml.py
tests/: __init__.py  test_avatar_controls.py  test_avatar_tags.py  test_avatar_tags_management.py  test_avatar_tags_query.py  test_avatar_widget.py  test_injection.py  test_profile_hotswap.py
