[project]
name = 'pyagentvox'
version = '0.2.1'
description = 'Two-way voice communication system for AI agents - voice output (TTS) and voice input (speech recognition)'
authors = [
    {name = "Jake Meador", email = "jameador13@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = '>=3.12'
keywords = [
    "voice",
    "tts",
    "text-to-speech",
    "speech-recognition",
    "stt",
    "ai",
    "assistant",
    "claude",
    "edge-tts",
    "emotion-tags",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "accelerate>=1.12.0",
    'edge-tts>=6.1.0',
    'mutagen>=1.47.0',
    'psutil>=6.1.0',
    'pyaudio>=0.2.14',
    'pygame>=2.6.0',
    'pywin32>=311; sys_platform == "win32"',
    'pyyaml>=6.0.3',
    'speechrecognition>=3.14.0',
]

[project.urls]
Homepage = "https://github.com/jmeador/pyagentvox"
Repository = "https://github.com/jmeador/pyagentvox"
Documentation = "https://github.com/jmeador/pyagentvox/blob/main/README.md"
Issues = "https://github.com/jmeador/pyagentvox/issues"

[project.optional-dependencies]
dev = [
    'pytest>=8.0.0',
    'pytest-cov>=4.1.0',
]
coqui = [
    'TTS>=0.22.0',
]
bark = [
    'transformers>=4.35.0',
    'torch>=2.0.0',
    'scipy>=1.11.0',
]
all-tts = [
    'TTS>=0.22.0',
    'transformers>=4.35.0',
    'torch>=2.0.0',
    'scipy>=1.11.0',
]

[project.scripts]
pyagentvox = 'pyagentvox.pyagentvox:main'
voice-injector = 'pyagentvox.injection:main'

[tool.setuptools]
packages = ["pyagentvox"]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=pyagentvox",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
